--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Pietro Piva Vieira (Marechal Dev)">
+  <meta name="description" content="Welcome to my linktree!">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,700&display=swap" />
   <link rel="stylesheet" href="./src/styles.css" />
